--- a/projects/zxing-scanner/package.json
+++ b/projects/zxing-scanner/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@zxing/ngx-scanner",
   "version": "3.0.0",
+  "license": "MIT"
   "description": "High-performance Angular 8 barcode scanner component based on ZXing.",
   "private": false,
   "dependencies": {
